2021-05-05  Henry S. Thompson  <ht@home.hst.name>

	* converter.py: detect TextIOWrapper as non-binary